--- a/main.html
+++ b/main.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="./css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="script.js"></script>
+        <script src="./script/script.js"></script>
         <title></title>
     </head>
     <body>
